# VTOL24

./: README.md  SSH Connection Guide.docx  SSH-Connection-Guide.md
aksan2023_ws/: mav.parm  mav.tlog  mav.tlog.raw
aksan2023_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
aksan2023_ws/src/: mav.parm  mav.tlog  mav.tlog.raw
aksan2023_ws/src/gazebo_things/: CMakeLists.txt  mav.parm  mav.tlog  mav.tlog.raw  readme.md  vtol2023.launch  vtol2023.parm  vtol2024.launch  vtol21.parm
aksan2023_ws/src/image_view/: CMakeLists.txt  README.md
aksan2023_ws/src/uav_commander/: .gitignore  CMakeLists.txt  readme.md
aksan2023_ws/src/uav_msgs/: CMakeLists.txt
aksan2023_ws/src/uav_teleop/: CMakeLists.txt  README.md
aksan2023_ws/src/video_stream_opencv/: README.md
aksantara_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
aksantara_ws/src/env_percept/: CMakeLists.txt
aksantara_ws/src/gazebo_things/: readme.md  vtol2021.launch
aksantara_ws/src/iq_vision/: CMakeLists.txt
aksantara_ws/src/lidar-preprocessing/: CMakeLists.txt
aksantara_ws/src/uav_commander/: frames.gv
aksantara_ws/src/uav_msgs/: CMakeLists.txt  README.md
aksantara_ws/src/uav_msgs/msg/: DzPosition.msg  LidarsReadings.msg  PrecLand.msg
aksantara_ws/src/uav_msgs/srv/: DetectQR.srv
aksantara_ws/src/video_stream_opencv/: CMakeLists.txt
cam_drone/: README
cam_drone/devel/: .catkin  local_setup.sh  setup.sh
eksperimen_opencv/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  calculate_distance.cpp  cmake_install.cmake  eksperimen_opencv  luminance_analysis  luminance_analysis.cpp  main.cpp  segmentation_experimenting  segmentation_experimenting.cpp
eksperimen_opencv/src/gate_detection/: gate_detection.cpp  gate_detection.hpp
(+410 files in other folders)
